--- a/EcommerceMS/MainWindow.xaml
+++ b/EcommerceMS/MainWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EcommerceMS"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Source="LoginPage.xaml">
+        Title="E-Commerce Management Systme" Height="450" Width="800" Source="LoginPage.xaml">
 
 </NavigationWindow>
