--- a/EcommerceMS/CustomerProfilePage.xaml
+++ b/EcommerceMS/CustomerProfilePage.xaml
@@ -8,7 +8,24 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CustomerProfilePage">
 
-    <Grid>
-        
+    <Grid Background="#FF4D49A0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="23*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="104*"/>
+            <RowDefinition Height="74*"/>
+            <RowDefinition Height="76*"/>
+            <RowDefinition Height="75*"/>
+            <RowDefinition Height="121*"/>
+        </Grid.RowDefinitions>
+        <Label x:Name="lab_custID" Content="Customer ID: " Margin="10,45,10,12" FontSize="22" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Padding="-1,-1,5,5"/>
+        <Label x:Name="lab_custName" Content="Customer Name: " Margin="10,10,10,19" Grid.Row="1" FontSize="20" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Padding="-1,-1,5,5"/>
+        <Label x:Name="lab_custEmail" Content="Email: " Margin="10,10,10,16" Grid.Row="2" FontSize="24" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Padding="-1,-1,5,5"/>
+        <Label x:Name="lab_custAddress" Content="Address: " Margin="10,10,10,14" Grid.Row="3" FontSize="20" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Padding="-1,-1,5,5"/>
+        <Label x:Name="lab_custPhone" Content="Phone: " Margin="10,10,10,60" Grid.Row="4" FontSize="24" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Padding="-1,-1,5,5"/>
+        <Button Content="Go The Product Page" Margin="28,35,39,24" Grid.Row="4" FontSize="24" Background="#FFF59181" Click="Button_Click" Grid.Column="1" RenderTransformOrigin="0.5,0.5"/>
+
     </Grid>
 </Page>
