--- a/EcommerceMS/SellerPage.xaml
+++ b/EcommerceMS/SellerPage.xaml
@@ -9,6 +9,32 @@
       Title="SellerPage">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="18*"/>
+            <RowDefinition Height="7*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="10,270,0,0" VerticalAlignment="Top" Height="41" Width="117" FontSize="20" Click="Button_Click">
+            <Button.BorderBrush>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.BorderBrush>
+        </Button>
+        <Button x:Name="btn_update" Content="Update" HorizontalAlignment="Left" Margin="218,270,0,0" VerticalAlignment="Top" Height="41" Width="104" FontSize="20" Click="Button_Click_2"/>
+        <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="400,270,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="20" Click="Button_Click_1"/>
+        <DataGrid x:Name="Product_Grid" d:ItemsSource="{d:SampleData ItemCount=5}" FontSize="15" Grid.Row="1"/>
+        <Label Content="ID" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="25"/>
+        <Label Content="Description" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="38" Width="117" Background="#FF4A42C6" FontSize="20"/>
+        <Label Content="Quntity" HorizontalAlignment="Left" Margin="336,175,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="10,194,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="25"/>
+        <Label Content="Price" HorizontalAlignment="Left" Margin="336,108,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20"/>
+        <TextBox x:Name="textbox_id" HorizontalAlignment="Left" Margin="166,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_id_TextChanged"/>
+        <TextBox x:Name="textbox_Qunitit" HorizontalAlignment="Left" Margin="428,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Qunitit_TextChanged"/>
+        <TextBox x:Name="textbox_Price" HorizontalAlignment="Left" Margin="428,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Price_TextChanged"/>
+        <TextBox x:Name="textbox_Name" HorizontalAlignment="Left" Margin="166,194,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_Name_TextChanged"/>
+        <TextBox x:Name="textbox_Dec" HorizontalAlignment="Left" Margin="166,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="138" Height="38" FontSize="20" TextChanged="textbox_Dec_TextChanged"/>
+        <Label Content="Seller_Page " HorizontalAlignment="Center" VerticalAlignment="Top" Width="550" Height="59" FontSize="30" Background="#FF2753B6" HorizontalContentAlignment="Center"/>
+
     </Grid>
 </Page>
