--- a/EcommerceMS/SellerPage.xaml
+++ b/EcommerceMS/SellerPage.xaml
@@ -10,10 +10,13 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="18*"/>
-            <RowDefinition Height="7*"/>
+            <RowDefinition Height="26*"/>
+            <RowDefinition Height="11*"/>
+            <RowDefinition Height="13*"/>
+            <RowDefinition Height="12*"/>
+            <RowDefinition Height="28*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="10,270,0,0" VerticalAlignment="Top" Height="41" Width="117" FontSize="20" Click="Button_Click">
+        <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="40" Width="117" FontSize="20" Click="Button_Click" Grid.Row="3">
             <Button.BorderBrush>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
@@ -21,19 +24,19 @@
                 </LinearGradientBrush>
             </Button.BorderBrush>
         </Button>
-        <Button x:Name="btn_update" Content="Update" HorizontalAlignment="Left" Margin="218,270,0,0" VerticalAlignment="Top" Height="41" Width="104" FontSize="20" Click="Button_Click_2"/>
-        <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="400,270,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="20" Click="Button_Click_1"/>
-        <DataGrid x:Name="Product_Grid" d:ItemsSource="{d:SampleData ItemCount=5}" FontSize="15" Grid.Row="1"/>
+        <Button x:Name="btn_update" Content="Update" HorizontalAlignment="Left" Margin="218,0,0,0" VerticalAlignment="Center" Height="40" Width="104" FontSize="20" Click="Button_Click_2" Grid.Row="3"/>
+        <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="400,0,0,0" VerticalAlignment="Center" Height="42" Width="110" FontSize="20" Click="Button_Click_1" Grid.Row="3"/>
+        <DataGrid x:Name="Product_Grid" d:ItemsSource="{d:SampleData ItemCount=5}" FontSize="15" Grid.Row="4"/>
         <Label Content="ID" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="25"/>
-        <Label Content="Description" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="38" Width="117" Background="#FF4A42C6" FontSize="20"/>
-        <Label Content="Quntity" HorizontalAlignment="Left" Margin="336,175,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="10,194,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="25"/>
-        <Label Content="Price" HorizontalAlignment="Left" Margin="336,108,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20"/>
-        <TextBox x:Name="textbox_id" HorizontalAlignment="Left" Margin="166,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_id_TextChanged"/>
-        <TextBox x:Name="textbox_Qunitit" HorizontalAlignment="Left" Margin="428,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Qunitit_TextChanged"/>
-        <TextBox x:Name="textbox_Price" HorizontalAlignment="Left" Margin="428,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Price_TextChanged"/>
-        <TextBox x:Name="textbox_Name" HorizontalAlignment="Left" Margin="166,194,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_Name_TextChanged"/>
-        <TextBox x:Name="textbox_Dec" HorizontalAlignment="Left" Margin="166,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="138" Height="38" FontSize="20" TextChanged="textbox_Dec_TextChanged"/>
+        <Label Content="Description" HorizontalAlignment="Left" Margin="10,13,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="20" Grid.Row="1"/>
+        <Label Content="Quntity" HorizontalAlignment="Left" Margin="331,13,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20" Grid.Row="1"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Height="38" Width="117" Background="#FF4A42C6" FontSize="25" Grid.Row="2"/>
+        <Label Content="Price" HorizontalAlignment="Left" Margin="331,89,0,0" VerticalAlignment="Top" Height="38" Width="81" Background="#FF4A42C6" FontSize="20"/>
+        <TextBox x:Name="txt_productID" HorizontalAlignment="Left" Margin="166,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_id_TextChanged"/>
+        <TextBox x:Name="textbox_Qunitit" HorizontalAlignment="Left" Margin="423,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Qunitit_TextChanged" Grid.Row="1"/>
+        <TextBox x:Name="textbox_Price" HorizontalAlignment="Left" Margin="423,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="38" FontSize="20" TextChanged="textbox_Price_TextChanged"/>
+        <TextBox x:Name="txt_name" HorizontalAlignment="Left" Margin="166,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_Name_TextChanged" Grid.Row="2"/>
+        <TextBox x:Name="txt_des" HorizontalAlignment="Left" Margin="166,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Height="38" FontSize="20" TextChanged="textbox_Dec_TextChanged" Grid.Row="1"/>
         <Label Content="Seller_Page " HorizontalAlignment="Center" VerticalAlignment="Top" Width="550" Height="59" FontSize="30" Background="#FF2753B6" HorizontalContentAlignment="Center"/>
 
     </Grid>
