--- a/EcommerceMS/App.xaml
+++ b/EcommerceMS/App.xaml
@@ -4,6 +4,27 @@
              xmlns:local="clr-namespace:EcommerceMS"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="txtBoxStyle" TargetType="{x:Type TextBoxBase}">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="190"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Foreground" Value="#FF009AFF"/>
+        </Style>
+        <Style x:Key="labelStyle" TargetType="{x:Type Label}">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="130"/>
+            <Setter Property="Background" Value="#FF687FF0"/>
+            <Setter Property="Foreground" Value="#FFFCFCFC"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Padding" Value="5,2,5,5"/>
+        </Style>
     </Application.Resources>
 </Application>
