--- a/EcommerceMS/RegistrationPage.xaml
+++ b/EcommerceMS/RegistrationPage.xaml
@@ -9,12 +9,18 @@
       Title="RegistrationPage">
 
     <Grid x:Name="theGrid">
-        <Label x:Name="logLab" Content="User Registration" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="205" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="24" Margin="292,15,0,0" Height="42"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="127*"/>
+            <RowDefinition Height="63*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="205*"/>
+        </Grid.RowDefinitions>
         <TextBox x:Name="txt_userName" HorizontalAlignment="Left" Margin="209,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_userName_TextChanged"/>
-        <Label x:Name="logLab_Copy" Content="User Name" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="130" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" Margin="62,92,0,0" Height="30"/>
         <TextBox x:Name="txt_password" HorizontalAlignment="Left" Margin="586,92,0,0" VerticalAlignment="Top" Width="190" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_password_TextChanged_1" />
-        <Label x:Name="logLab_Copy1" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="130" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" Margin="433,92,0,0" Height="30"/>
-        <Button x:Name="btn_forgetPassword" Content="Have an account?" HorizontalAlignment="Left" Margin="39,310,0,0" VerticalAlignment="Top" Width="176" Height="32" Foreground="Blue" FontSize="20" FontWeight="Bold" HorizontalContentAlignment="Left" Click="btn_forgetPassword_Click">
+        <Label x:Name="logLab" Content="User Registration" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="204" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="24" Margin="0,22,0,0" Height="42"/>
+        <Label x:Name="logLab_Copy" Content="User Name" Style="{StaticResource labelStyle}" Margin="62,92,0,0"/>
+        <Label x:Name="logLab_Copy1" Content="Password" Style="{StaticResource labelStyle}" Margin="433,92,0,0"/>
+        <Button x:Name="btn_forgetPassword" Content="Have an account?" HorizontalAlignment="Left" Margin="48,63,0,0" VerticalAlignment="Top" Width="176" Height="32" Foreground="Blue" FontSize="20" FontWeight="Bold" HorizontalContentAlignment="Left" Click="btn_forgetPassword_Click" Grid.Row="3">
             <Button.BorderBrush>
                 <SolidColorBrush Color="Black" Opacity="0"/>
             </Button.BorderBrush>
@@ -25,17 +31,18 @@
                 <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
             </Button.Background>
         </Button>
-        <Button x:Name="btn_signUp" Content="SignUp" HorizontalAlignment="Left" Margin="209,380,0,0" VerticalAlignment="Top" Width="354" Height="35" Background="#FF687FF0" Foreground="White" FontSize="24" Click="btn_singUp_Click" IsEnabled="False"/>
-        <Label x:Name="logLab_Copy2" Content="Email" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="130" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" Margin="62,148,0,0" Height="30"/>
-        <TextBox x:Name="txt_email" HorizontalAlignment="Left" Margin="209,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_email_TextChanged"/>
-        <Label x:Name="logLab_Copy3" Content="Address" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="130" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" Margin="62,201,0,0" Height="30"/>
-        <Label x:Name="logLab_Copy4" Content="Phone Number" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF687FF0" Foreground="#FFFCFCFC" Width="130" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" Margin="62,256,0,0" Height="30"/>
-        <TextBox x:Name="txt_phone" HorizontalAlignment="Left" Margin="209,256,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_phone_TextChanged"/>
-        <TextBox x:Name="txt_address" HorizontalAlignment="Left" Margin="209,201,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_address_TextChanged"/>
-        <Label x:Name="lab_MoreThan5Chars" Content="More Than 4 Chars" HorizontalAlignment="Left" Margin="406,148,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible"/>
-        <Label x:Name="lab_ContainSpec" Content="Contain Special" HorizontalAlignment="Left" Margin="406,185,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible"/>
-        <Label x:Name="lab_ContainLetters" Content="Contain Letters" HorizontalAlignment="Left" Margin="406,216,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="36" Visibility="Visible"/>
-        <Label x:Name="lab_ContainDigits" Content="Contain Digits" HorizontalAlignment="Left" Margin="406,246,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible"/>
+        <Button x:Name="btn_signUp" Content="SignUp" HorizontalAlignment="Left" Margin="229,61,0,0" VerticalAlignment="Top" Width="354" Height="36" Background="#FF687FF0" Foreground="White" FontSize="24" Click="btn_singUp_Click" Grid.Row="3"/>
+        <Label x:Name="logLab_Copy2" Content="Email" Style="{StaticResource labelStyle}"  Margin="62,21,0,0" Grid.Row="1"/>
+        <Label x:Name="logLab_Copy3" Content="Address" Style="{StaticResource labelStyle}"  Margin="62,11,0,0" Grid.Row="2"/>
+        <Label x:Name="logLab_Copy4" Content="Phone Number" Style="{StaticResource labelStyle}"  Margin="62,11,0,0" Grid.Row="3"/>
+        
+        <Label x:Name="lab_MoreThan5Chars" Content="More Than 4 Chars" HorizontalAlignment="Left" Margin="433,20,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible" Grid.Row="1"/>
+        <Label x:Name="lab_ContainSpec" Content="Contain Special" HorizontalAlignment="Left" Margin="433,57,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible" Grid.Row="1" Grid.RowSpan="2"/>
+        <Label x:Name="lab_ContainLetters" Content="Contain Letters" HorizontalAlignment="Left" Margin="433,25,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="36" Visibility="Visible" Grid.Row="2" Grid.RowSpan="2"/>
+        <Label x:Name="lab_ContainDigits" Content="Contain Digits" HorizontalAlignment="Left" Margin="433,0,0,0" VerticalAlignment="Top" Width="176" FontSize="14" Foreground="#FFFC1616" Height="37" Visibility="Visible" Grid.Row="3"/>
+        <TextBox x:Name="txt_email" HorizontalAlignment="Left" Margin="209,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_email_TextChanged" Grid.Row="1"/>
+        <TextBox x:Name="txt_phone" HorizontalAlignment="Left" Margin="209,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_phone_TextChanged" Grid.Row="3"/>
+        <TextBox x:Name="txt_address" HorizontalAlignment="Left" Margin="209,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="191" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" TextChanged="txt_address_TextChanged" Grid.Row="2"/>
 
     </Grid>
 </Page>
