--- a/EcommerceMS/App.xaml
+++ b/EcommerceMS/App.xaml
@@ -9,11 +9,19 @@
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            
             <Setter Property="Height" Value="30"/>
             <Setter Property="Width" Value="190"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            
             <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontFamily" Value="Arial Black"/>
+            <Setter Property="FontStyle" Value="Italic"/>
             <Setter Property="Foreground" Value="#FF009AFF"/>
+            <Setter Property="Foreground" Value="White"/>
         </Style>
+        
         <Style x:Key="labelStyle" TargetType="{x:Type Label}">
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
